--- a/regression/regressor.ipynb
+++ b/regression/regressor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "id": "654d0f40",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "id": "1c32ff46",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "id": "0489ecdd",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "id": "259788eb",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "0127a35c",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "id": "ac1726c3",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "id": "fbdbb089",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "id": "b7c11c15",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,9 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "id": "594ddba0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -673,7 +675,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "id": "00647dca",
    "metadata": {},
    "outputs": [],
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "id": "a4eb496b",
    "metadata": {},
    "outputs": [],
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 12,
    "id": "5749f872",
    "metadata": {},
    "outputs": [],
@@ -748,19 +750,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "id": "393f4301",
    "metadata": {},
    "outputs": [],
    "source": [
     "model1 = LinearRegression()\n",
     "model1.fit(x_train, y_train)\n",
-    "pred1 = model1.predict(x_val)"
+    "pred1 = model1.predict(x_val)\n",
+    "pred1 = np.round(pred1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 14,
    "id": "2ed11747",
    "metadata": {},
    "outputs": [],
@@ -778,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "id": "908f415c",
    "metadata": {},
    "outputs": [
@@ -786,11 +789,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.10270126751675346\n",
-      "rmse: 0.32047038477331014\n",
-      "mae: 0.26395298574144876\n",
-      "mape: 309046301789123.25\n",
-      "r2_score: 0.914003093994209\n"
+      "mse: 0.13\n",
+      "rmse: 0.36055512754639896\n",
+      "mae: 0.13\n",
+      "mape: 213920982300098.56\n",
+      "r2_score: 0.8988676089482718\n"
      ]
     }
    ],
@@ -804,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "id": "e1b05f3a",
    "metadata": {},
    "outputs": [
@@ -812,14 +815,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "교차검증 rsme: 0.1050294917216245\n"
+      "교차검증 : 0.9148747680446391\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
-    "scores = cross_val_score(model1,x_train, y_train, scoring = \"neg_mean_squared_error\", cv = 10)\n",
-    "print(\"교차검증 rsme:\",-scores.mean())"
+    "scores = cross_val_score(model1,x_train, y_train, cv = 10)\n",
+    "print(\"교차검증 :\",scores.mean())"
    ]
   },
   {
@@ -832,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 17,
    "id": "97add887",
    "metadata": {},
    "outputs": [],
@@ -843,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 18,
    "id": "74118026",
    "metadata": {},
    "outputs": [],
@@ -856,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 19,
    "id": "933b23cc",
    "metadata": {},
    "outputs": [
@@ -866,7 +869,7 @@
        "KNeighborsRegressor()"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,12 +880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 20,
    "id": "222a5e6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred2 = model2.predict(x_val_s)"
+    "pred2 = model2.predict(x_val_s)\n",
+    "pred2 = np.round(pred2)"
    ]
   },
   {
@@ -895,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 21,
    "id": "b35fb778",
    "metadata": {},
    "outputs": [
@@ -903,11 +907,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.6958\n",
-      "rmse: 0.8341462701469089\n",
-      "mae: 0.6970000000000001\n",
-      "mape: 1058345912432066.9\n",
-      "r2_score: 0.41737187236692674\n"
+      "mse: 0.805\n",
+      "rmse: 0.897217922246318\n",
+      "mae: 0.685\n",
+      "mape: 1002050917089935.4\n",
+      "r2_score: 0.37375711694891345\n"
      ]
     }
    ],
@@ -929,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 22,
    "id": "68c0804f",
    "metadata": {},
    "outputs": [],
@@ -939,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 23,
    "id": "531b04a6",
    "metadata": {},
    "outputs": [
@@ -952,7 +956,7 @@
        "             scoring='neg_mean_absolute_error')"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,17 +972,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 24,
    "id": "d1aa5931",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred3 = md_gs.predict(x_val_s)"
+    "pred3 = md_gs.predict(x_val_s)\n",
+    "pred3 = np.round(pred3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 25,
    "id": "01b2a820",
    "metadata": {},
    "outputs": [
@@ -986,11 +991,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.5828472222222222\n",
-      "rmse: 0.7634443150762354\n",
-      "mae: 0.63375\n",
-      "mape: 983285918642558.5\n",
-      "r2_score: 0.5119528804549136\n"
+      "mse: 0.705\n",
+      "rmse: 0.8396427811873333\n",
+      "mae: 0.65\n",
+      "mape: 1035827914295214.1\n",
+      "r2_score: 0.45155126391178135\n"
      ]
     }
    ],
@@ -1004,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 26,
    "id": "66f8d749",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 27,
    "id": "6188b892",
    "metadata": {},
    "outputs": [],
@@ -1032,19 +1037,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 28,
    "id": "5a53f57a",
    "metadata": {},
    "outputs": [],
    "source": [
     "model3 = DecisionTreeRegressor()\n",
     "model3.fit(x_train, y_train)\n",
-    "pred4 = model3.predict(x_val)"
+    "pred4 = model3.predict(x_val)\n",
+    "pred4 = np.round(pred4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 29,
    "id": "6d455976",
    "metadata": {},
    "outputs": [
@@ -1052,11 +1058,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.1625\n",
-      "rmse: 0.4031128874149275\n",
-      "mae: 0.1625\n",
+      "mse: 0.155\n",
+      "rmse: 0.39370039370059057\n",
+      "mae: 0.155\n",
       "mape: 101330991615836.23\n",
-      "r2_score: 0.8639306255527819\n"
+      "r2_score: 0.8794190722075548\n"
      ]
     }
    ],
@@ -1070,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 30,
    "id": "ef449ffa",
    "metadata": {},
    "outputs": [],
@@ -1080,12 +1086,13 @@
     "md2 = DecisionTreeRegressor()\n",
     "md2_gs = GridSearchCV(md2, params, cv = 10)\n",
     "md2_gs.fit(x_train,y_train)\n",
-    "pred5 = md2_gs.predict(x_val)"
+    "pred5 = md2_gs.predict(x_val)\n",
+    "pred5 = np.round(pred5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 31,
    "id": "f2d74a29",
    "metadata": {},
    "outputs": [
@@ -1093,11 +1100,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.10834042501747726\n",
-      "rmse: 0.32915106716745923\n",
-      "mae: 0.1782957627490329\n",
-      "mape: 135380250179312.52\n",
-      "r2_score: 0.9092811454801608\n"
+      "mse: 0.1425\n",
+      "rmse: 0.37749172176353746\n",
+      "mae: 0.1425\n",
+      "mape: 90071992547410.0\n",
+      "r2_score: 0.8891433405779132\n"
      ]
     }
    ],
@@ -1119,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 32,
    "id": "a317a8c2",
    "metadata": {},
    "outputs": [],
@@ -1129,19 +1136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 33,
    "id": "42dca300",
    "metadata": {},
    "outputs": [],
    "source": [
     "model4 = SVR()\n",
     "model4.fit(x_train_s, y_train)\n",
-    "pred6 = model4.predict(x_val_s)"
+    "pred6 = model4.predict(x_val_s)\n",
+    "pred6 = np.round(pred6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 34,
    "id": "dd7cfb43",
    "metadata": {},
    "outputs": [
@@ -1149,11 +1157,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.12357187386089681\n",
-      "rmse: 0.35152791334529443\n",
-      "mae: 0.28883735965989826\n",
-      "mape: 356879473115512.25\n",
-      "r2_score: 0.8965270918429368\n"
+      "mse: 0.17\n",
+      "rmse: 0.41231056256176607\n",
+      "mae: 0.17\n",
+      "mape: 292733975779082.25\n",
+      "r2_score: 0.8677499501631245\n"
      ]
     }
    ],
@@ -1175,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 35,
    "id": "52fbfe49",
    "metadata": {},
    "outputs": [],
@@ -1185,22 +1193,23 @@
     "md3 = SVR()\n",
     "md3_gs = GridSearchCV(md3, params, cv = 10)\n",
     "md3_gs.fit(x_train_s,y_train)\n",
-    "pred7 = md3_gs.predict(x_val_s)"
+    "pred7 = md3_gs.predict(x_val_s)\n",
+    "pred7 = np.round(pred7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 36,
    "id": "9a340f74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVR(C=13, gamma=0.00875)"
+       "SVR(C=14, gamma=0.005)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 37,
    "id": "d33b2f51",
    "metadata": {},
    "outputs": [
@@ -1219,11 +1228,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.10329602833935002\n",
-      "rmse: 0.32139699491337814\n",
-      "mae: 0.26487758445805065\n",
-      "mape: 310342741097614.06\n",
-      "r2_score: 0.9135050710214309\n"
+      "mse: 0.1375\n",
+      "rmse: 0.37080992435478316\n",
+      "mae: 0.1375\n",
+      "mape: 213920982300098.56\n",
+      "r2_score: 0.8930330479260566\n"
      ]
     }
    ],
@@ -1245,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 38,
    "id": "bb0b789d",
    "metadata": {},
    "outputs": [],
@@ -1255,19 +1264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 39,
    "id": "41a33c3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "model5 = RandomForestRegressor()\n",
     "model5.fit(x_train, y_train)\n",
-    "pred8 = model5.predict(x_val)"
+    "pred8 = model5.predict(x_val)\n",
+    "pred8 = np.round(pred8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 40,
    "id": "fe883cce",
    "metadata": {},
    "outputs": [
@@ -1275,11 +1285,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.06991325\n",
-      "rmse: 0.26441113819202094\n",
-      "mae: 0.167075\n",
-      "mape: 107298261122102.16\n",
-      "r2_score: 0.9414581403503263\n"
+      "mse: 0.0875\n",
+      "rmse: 0.2958039891549808\n",
+      "mae: 0.0875\n",
+      "mape: 90071992547409.95\n",
+      "r2_score: 0.9319301214074905\n"
      ]
     }
    ],
@@ -1292,6 +1302,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c673d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 최고 성능이다."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca729d8a",
    "metadata": {},
@@ -1301,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 41,
    "id": "8ec4f2b8",
    "metadata": {},
    "outputs": [],
@@ -1311,22 +1331,23 @@
     "md4 = RandomForestRegressor()\n",
     "md4_gs = GridSearchCV(md4, params, cv = 10)\n",
     "md4_gs.fit(x_train,y_train)\n",
-    "pred9 = md4_gs.predict(x_val)"
+    "pred9 = md4_gs.predict(x_val)\n",
+    "pred9 = np.round(pred9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 42,
    "id": "db7f89f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(max_depth=14, n_estimators=5)"
+       "RandomForestRegressor(max_depth=16, min_samples_leaf=11, n_estimators=4)"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 43,
    "id": "99aee108",
    "metadata": {},
    "outputs": [
@@ -1345,11 +1366,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.0848\n",
-      "rmse: 0.29120439557122074\n",
-      "mae: 0.16899999999999998\n",
-      "mape: 128352589380059.23\n",
-      "r2_score: 0.928992720288467\n"
+      "mse: 0.1025\n",
+      "rmse: 0.32015621187164245\n",
+      "mae: 0.1025\n",
+      "mape: 56294995342131.26\n",
+      "r2_score: 0.9202609993630604\n"
      ]
     }
    ],
@@ -1363,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 44,
    "id": "5ed008bb",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 45,
    "id": "06ce6a39",
    "metadata": {},
    "outputs": [],
@@ -1391,19 +1412,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 46,
    "id": "3bc9c7ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "model6 = XGBRegressor()\n",
     "model6.fit(x_train, y_train)\n",
-    "pred10 = model6.predict(x_val)"
+    "pred10 = model6.predict(x_val)\n",
+    "pred10 = np.round(pred10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 47,
    "id": "5946b022",
    "metadata": {},
    "outputs": [
@@ -1411,11 +1433,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.08040018219890442\n",
-      "rmse: 0.2835492588579706\n",
-      "mae: 0.19255661746661645\n",
-      "mape: 118834697734717.55\n",
-      "r2_score: 0.9326769077092475\n"
+      "mse: 0.1025\n",
+      "rmse: 0.32015621187164245\n",
+      "mae: 0.1025\n",
+      "mape: 78812993478983.72\n",
+      "r2_score: 0.9202609993630604\n"
      ]
     }
    ],
@@ -1437,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 48,
    "id": "edcdda1a",
    "metadata": {},
    "outputs": [],
@@ -1447,12 +1469,13 @@
     "md5 = XGBRegressor()\n",
     "md5_gs = GridSearchCV(md5, params, cv = 10)\n",
     "md5_gs.fit(x_train,y_train)\n",
-    "pred11 = md5_gs.predict(x_val)"
+    "pred11 = md5_gs.predict(x_val)\n",
+    "pred11 = np.round(pred11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 49,
    "id": "a3b93f52",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1494,7 @@
        "             reg_lambda=1, ...)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 50,
    "id": "c9da0b4b",
    "metadata": {},
    "outputs": [
@@ -1490,11 +1513,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: 0.06395980781239181\n",
-      "rmse: 0.25290276355230246\n",
-      "mae: 0.17263297417055581\n",
-      "mape: 116492463771484.23\n",
-      "r2_score: 0.946443255145868\n"
+      "mse: 0.09\n",
+      "rmse: 0.3\n",
+      "mae: 0.09\n",
+      "mape: 67553994410557.48\n",
+      "r2_score: 0.9299852677334189\n"
      ]
     }
    ],
@@ -1508,18 +1531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 51,
    "id": "10a93cd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### 최고 성능이다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4f2ba5b",
    "metadata": {},
    "outputs": [],
    "source": []
